--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
       <!-- /#dropdown.section -->
       <section id="checkbox" class="section">
         <h2 class="title"> 4. checkbox, switch </h2>
+
+        <div>
+          <div class="checkbox">
+            <input type="checkbox" name="check1" id="check1">
+            <label for="check1" class="checkbox__label">Текст какого-то чекбокса</label>
+          </div>
+        </div>
       </section>
       <!-- /#checkbox.section -->
       <section id="input" class="section">
