--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
             <input type="checkbox" name="check1" id="check1">
             <label for="check1" class="checkbox__label">Текст какого-то чекбокса</label>
           </div>
+          <div class="switch">
+            <input type="checkbox" name="switch1" id="switch1">
+            <label for="switch1" class="switch__label">Текст какого-то свитча</label>
+          </div>
+          <div class="switch2">
+            <input type="checkbox" name="switch2" id="switch2" checked disabled>
+            <label for="switch2" class="switch__label">Текст какого-то свитча</label>
+          </div>
         </div>
       </section>
       <!-- /#checkbox.section -->
