add: add simple field and field with icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="./css/style.css">
+  <script src="https://code.iconify.design/iconify-icon/3.0.0/iconify-icon.min.js"></script>
   <title>UI lib</title>
 </head>
 
@@ -71,6 +73,14 @@
       <!-- /#checkbox.section -->
       <section id="input" class="section">
         <h2 class="title"> 5. Поля ввода </h2>
+        <div class="field">
+          <input type="text" class='field__control' placeholder="Введите ваше имя">
+        </div>
+
+        <div class="field">
+          <input type="text" class='field__control' placeholder="Поиск...">
+          <span class="akar-icons--search field__icon"></span>
+        </div>
       </section>
       <!-- /#input.section -->
       <section id="menubar" class="section">
